add: Dockefile ARM 버전과 x86 버전으로 관리

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     ports:
       - 33333:33333
       - 37373:37373
-    environments:
-	    - HOST=${HOST}
-	    - PORT=${PORT}
-	    - FASTAPI_PORT=${FASTAPI_PORT}
-	    - SERVER_CERTIFICATE=${SERVER_CERTIFICATE}
-	    - SERVER_PRIVATE=${SERVER_PRIVATE}
-	    - CLIENT_CA_CERTIFICATE=${CLIENT_CA_CERTIFICATE}
-	    - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
+    environment:
+      - HOST=${HOST}
+      - PORT=${PORT}
+      - FASTAPI_PORT=${FASTAPI_PORT}
+      - SERVER_CERTIFICATE=${SERVER_CERTIFICATE}
+      - SERVER_PRIVATE=${SERVER_PRIVATE}
+      - CLIENT_CA_CERTIFICATE=${CLIENT_CA_CERTIFICATE}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
     networks:
       - app
 
